# KronEditor

./: .claudeignore  .gitignore  CLAUDE.md  README.md  index.html  package.json  refactor_app.py  setup_toolchain.py  update_locales.py
doc/: architecture.html
include/: standardfunctions.h
public/libraries/: advanced_control.xml  arithmetic.xml  bistable.xml  bit_logic.xml  bitwise.xml  communication.xml  comparison.xml  comparison_selection.xml  conversion.xml  counters.xml  edge_detectors.xml  ethercat.xml  math.xml  motion.xml  system.xml  timers.xml
resources/include/: kron_nc.h  kron_pi.h  kronconverter.h  kronethercatmaster.h  kronhal.h  kronhal_bb.h  kronhal_jetson.h  kronhal_rpi.h  kronhal_sim.h  kronlogic.h  kronmotion.h
scripts/: download-mingw.js
src/: App.css  App.jsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: ast.rs  grammar.lalrpop  lexer.rs  main.rs
src-tauri/toolchains/: clang-command-templates.json
src-tauri/toolchains/sysroots/simulation_env/include/: kron_mock_io.h
src/components/: BlockSettingsModal.jsx  BoardConfigPage.jsx  BoardSelectionModal.jsx  CreateItemModal.jsx  DataTypeCreationModal.jsx  DraggableBlock.jsx  EditorPane.jsx  EnumTypeEditor.jsx  EtherCATEditor.jsx  OutputPanel.jsx  ProjectSidebar.jsx  ResourceEditor.jsx  RungContainer.jsx  RungEditorNew.jsx  SettingsPage.jsx  SlaveConfigPage.jsx  StartScreen.jsx  TaskManager.jsx  Toolbox.jsx  VariableManager.jsx
src/locales/: en.json  ru.json  tr.json
src/services/: CTranspilerService.js  EsiParser.js  (+3 more)
(+24 files in other folders)
