[package]
name = "KronEditor"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"
rust-version = "1.77.2"
default-run = "KronEditor"

[build-dependencies]
tauri-build = { version = "2.0.1", features = [] }
lalrpop = "0.20"

[dependencies]
tauri = { version = "2.2.0", features = [] }
tauri-plugin-fs = "2.2.0"
tauri-plugin-dialog = "2.2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
logos = "0.14"
lalrpop-util = { version = "0.20", features = ["lexer"] }
regex = "1"
object = { version = "0.36", features = ["read"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
